bk_ida/gccida/c3/alloc_aux_for_edges
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_aux_for_edges/src/cfg.c:1175:7: error: use of undeclared identifier 'alloc_aux_for_edges_initialized'
if ( !alloc_aux_for_edges_initialized ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_aux_for_edges/src/cfg.c:1178:1: error: use of undeclared identifier 'alloc_aux_for_edges_initialized'
alloc_aux_for_edges_initialized = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/alloc_aux_for_edges/src/obj/cfg.o] Error 1
